# docs/swagger.json
@@ -239,7 +239,7 @@
                 }
             }
         },
-        "/multisigs/{multisig_address}/members/{member_id}": {
+        "/multisigs/{multisig_address}/members/{member_address}": {
             "get": {
                 "description": "Get a single member by ID",
                 "tags": [
@@ -255,9 +255,9 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "Member ID",
-                        "name": "member_id",
+                        "type": "string",
+                        "description": "Member Address",
+                        "name": "member_address",
                         "in": "path",
                         "required": true
                     }
@@ -272,7 +272,7 @@
                 }
             },
             "put": {
-                "description": "Update a member",
+                "description": "Update a member under a multisig",
                 "tags": [
                     "Members"
                 ],
@@ -286,9 +286,9 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "Member ID",
-                        "name": "member_id",
+                        "type": "string",
+                        "description": "Member Address",
+                        "name": "member_address",
                         "in": "path",
                         "required": true
                     },
@@ -312,7 +312,7 @@
                 }
             },
             "delete": {
-                "description": "Delete a member",
+                "description": "Delete a member under a multisig",
                 "tags": [
                     "Members"
                 ],
@@ -326,9 +326,9 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "Member ID",
-                        "name": "member_id",
+                        "type": "string",
+                        "description": "Member Address",
+                        "name": "member_address",
                         "in": "path",
                         "required": true
                     }
@@ -426,7 +426,7 @@
                 }
             }
         },
-        "/multisigs/{multisig_address}/spends/{spend_id}": {
+        "/multisigs/{multisig_address}/spends/{spend_address}": {
             "get": {
                 "description": "Get a single spend by ID",
                 "tags": [
@@ -442,9 +442,9 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "Spend ID",
-                        "name": "spend_id",
+                        "type": "string",
+                        "description": "Spend Address",
+                        "name": "spend_address",
                         "in": "path",
                         "required": true
                     }
@@ -459,7 +459,7 @@
                 }
             },
             "put": {
-                "description": "Update a spend",
+                "description": "Update a spend under a multisig",
                 "tags": [
                     "Spends"
                 ],
@@ -473,9 +473,9 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "Spend ID",
-                        "name": "spend_id",
+                        "type": "string",
+                        "description": "Spend Address",
+                        "name": "spend_address",
                         "in": "path",
                         "required": true
                     },
@@ -499,7 +499,7 @@
                 }
             },
             "delete": {
-                "description": "Delete a spend",
+                "description": "Delete a spend under a multisig",
                 "tags": [
                     "Spends"
                 ],
@@ -513,9 +513,9 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "Spend ID",
-                        "name": "spend_id",
+                        "type": "string",
+                        "description": "Spend Address",
+                        "name": "spend_address",
                         "in": "path",
                         "required": true
                     }
@@ -613,7 +613,7 @@
                 }
             }
         },
-        "/multisigs/{multisig_address}/vaults/{vault_id}": {
+        "/multisigs/{multisig_address}/vaults/{vault_address}": {
             "get": {
                 "description": "Get a single vault by ID",
                 "tags": [
@@ -629,9 +629,9 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "Vault ID",
-                        "name": "vault_id",
+                        "type": "string",
+                        "description": "Vault Address",
+                        "name": "vault_address",
                         "in": "path",
                         "required": true
                     }
@@ -646,7 +646,7 @@
                 }
             },
             "put": {
-                "description": "Update a vault",
+                "description": "Update a vault under a multisig",
                 "tags": [
                     "Vaults"
                 ],
@@ -660,14 +660,14 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "Vault ID",
-                        "name": "vault_id",
+                        "type": "string",
+                        "description": "Vault Address",
+                        "name": "vault_address",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Updated vault object",
+                        "description": "Vault object",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -686,7 +686,7 @@
                 }
             },
             "delete": {
-                "description": "Delete a vault",
+                "description": "Delete a vault under a multisig",
                 "tags": [
                     "Vaults"
                 ],
@@ -700,9 +700,9 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "Vault ID",
-                        "name": "vault_id",
+                        "type": "string",
+                        "description": "Vault Address",
+                        "name": "vault_address",
                         "in": "path",
                         "required": true
                     }
